--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "decorators": "tsnd --respawn decorators"
+    "clean": "rm -rf node_modules",
+    "infer": "tsnd --respawn infer"
   },
   "keywords": [],
   "author": "Mario Lazzari",
   "license": "ISC",
   "devDependencies": {
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.2"
+    "typescript": "^5.5.3"
+  },
+  "dependencies": {
+    "tdungeon": "^1.0.0"
   }
 }
